# arkanoid

./: CMakeLists.txt  README.md  build.sh  main  output.txt  platformio.ini
data/configApp/: config.txt
data/server/: config.txt
include/: connection.hpp
include/server/: camera.hpp  server.hpp
src/: connection.cpp  main.cpp  server.cpp  test.cpp
src/configApp/: configApp.cpp
src/server/: connection.cpp  server.cpp
test/: test.cpp
